syntax = "proto3";
package scyna;
option optimize_for = CODE_SIZE;
option go_package = ".;scyna";

message Request 
{
  uint64 CallID = 1;
  bytes Body = 2;
  bool JSON = 3;
  string Data = 4;
}

message Response 
{
  int32 Code = 1;
  bytes Body = 2;
  uint64 SessionID = 3;
  string Token = 4;
  uint64 Expired = 5;
}
